manifests/03-apisix/ingressss-annotations-10000/9870-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09870-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09870-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09871-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09871-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09872-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09872-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09873-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09873-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09874-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09874-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09875-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09875-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09876-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09876-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09877-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09877-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09878-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09878-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 09879-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "09879-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
